workplace/log/build_2024-05-05_19-02-15/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/ztest.py", line 81
    excpt KeyboardInterrupt:
        ^
SyntaxError: invalid syntax

  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/point.py", line 18
    
    ^
SyntaxError: unexpected EOF while parsing

  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/walk_onesec.py", line 39
    def main:
            ^
SyntaxError: invalid syntax

